package cn.thenai.adapter.objectadapter;

public class Voltage220V {
    public int output220V() {
        int src = 220;
        System.out.println("电压等于=" + src + "V");
        return src;
    }
}