package cn.thenai.adapter.objectadapter;

public interface Voltage5V {
    int output5V();
}